# talent-inbound-os

./: .claudeignore  .gitignore  README.md  package.json
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py  002_create_opportunities_table.py  003_create_interactions_table.py  add_detected_language.py  add_is_sent_to_draft_responses.py  cd82b27a17c1_add_draft_responses_table.py  f01db71198fd_create_candidate_profiles_table.py  rename_status_to_stage.py
backend/src/talent_inbound/: cli.py  config.py  container.py  main.py  worker.py
backend/src/talent_inbound/api/v1/: router.py
backend/src/talent_inbound/modules/auth/application/: get_current_user.py  login_user.py  register_user.py
backend/src/talent_inbound/modules/auth/domain/: entities.py  events.py  exceptions.py  repositories.py
backend/src/talent_inbound/modules/auth/infrastructure/: orm_models.py  password.py  repositories.py
backend/src/talent_inbound/modules/auth/presentation/: dependencies.py  router.py  schemas.py
backend/src/talent_inbound/modules/ingestion/application/: submit_message.py
backend/src/talent_inbound/modules/ingestion/domain/: entities.py  events.py  exceptions.py  repositories.py
backend/src/talent_inbound/shared/application/: interfaces.py  use_case.py
backend/src/talent_inbound/shared/domain/: base_entity.py  enums.py  events.py  value_objects.py
backend/src/talent_inbound/shared/infrastructure/: database.py  event_bus.py  logging.py  middleware.py
backend/tests/: conftest.py
backend/tests/e2e/: conftest.py  test_auth_flow.py  test_ingestion_flow.py  test_opportunity_lifecycle.py  test_profile_flow.py
backend/tests/integration/: conftest.py  factories.py
backend/tests/integration/modules/pipeline/: test_analyst_scoring.py  test_language_detection.py  test_pipeline_graph.py
backend/tests/unit/: conftest.py
backend/tests/unit/modules/pipeline/: test_stage_detector.py
frontend/: .env.example  Dockerfile  (+3 more)
(+107 files in other folders)
